[metadata]
name = hvppycommands
version = 0.0.1
description = hvppycommands is a package containing customized Linux commands.
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    mypy

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    hvppyrm = hvppycommands.rm:run
